--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
             background-size: 400% 400%;
             animation: rainbowBG 15s ease infinite;
             display: flex; justify-content: center; align-items: center;
-            touch-action: manipulation;
         }
 
         @keyframes rainbowBG {
@@ -33,29 +32,37 @@
             100% { background-position: 0% 50%; }
         }
 
-        #lineCanvas { position: fixed; top: 0; left: 0; z-index: 1; width: 100%; height: 100%; pointer-events: none; }
+        #lineCanvas { position: fixed; top: 0; left: 0; z-index: 1; width: 100%; height: 100%; }
 
+        /* --- UPDATED RAINBOW QUIZ BOX --- */
         .container {
-            background: rgba(255, 255, 255, 0.85);
-            backdrop-filter: blur(12px);
-            -webkit-backdrop-filter: blur(12px);
+            background: linear-gradient(-45deg, #ffffff, #fff0f3, #f0f7ff, #ffffff);
+            background-size: 300% 300%;
+            animation: moveGradient 8s ease infinite;
             padding: 2.5rem 2rem;
-            border-radius: 35px;
+            border-radius: 30px;
             width: 90%;
             max-width: 400px;
             text-align: center;
             position: relative;
             z-index: 10;
-            /* Animated Rainbow Border */
+            backdrop-filter: blur(15px);
+            /* This creates the Rainbow Border effect */
             border: 5px solid transparent;
-            border-image: linear-gradient(45deg, #ffafcc, #bde0fe, #b9fbc0, #ffc8dd) 1;
-            box-shadow: 0 20px 50px rgba(0,0,0,0.1), 0 0 20px rgba(255, 175, 204, 0.5);
-            animation: borderGlow 5s linear infinite;
+            border-image: linear-gradient(45deg, #ffafcc, #bde0fe, #ffc8dd, #b9fbc0, #fcf6bd) 1;
+            border-radius: 30px; /* Note: border-image can sometimes break border-radius in some browsers, using box-shadow as fallback */
+            box-shadow: 0 0 20px rgba(255, 175, 204, 0.5), 0 20px 50px rgba(0,0,0,0.1);
+            background-clip: padding-box;
+            border: 4px solid white; /* Keeping the clean white edge but adding a rainbow glow below */
+            box-shadow: 0 0 15px 5px rgba(255, 255, 255, 0.6), 
+                        0 0 20px 2px #ffafcc, 
+                        0 0 25px 5px #bde0fe;
         }
 
-        @keyframes borderGlow {
-            0%, 100% { filter: hue-rotate(0deg); }
-            50% { filter: hue-rotate(180deg); }
+        @keyframes moveGradient {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
         }
 
         h1 { font-family: 'Great Vibes', cursive; color: var(--text-color); margin: 0 0 15px 0; font-size: 2.5rem; }
@@ -63,71 +70,78 @@
         p { font-weight: 700; color: var(--text-color); font-size: 1.1rem; margin-bottom: 20px; }
 
         .page { display: none; }
-        .active { display: block; animation: slideIn 0.7s cubic-bezier(0.175, 0.885, 0.32, 1.275); }
+        .active { display: block; animation: slideIn 0.6s cubic-bezier(0.23, 1, 0.32, 1); }
 
         @keyframes slideIn {
-            from { transform: scale(0.9) translateY(20px); opacity: 0; }
-            to { transform: scale(1) translateY(0); opacity: 1; }
+            from { transform: translateX(50px); opacity: 0; }
+            to { transform: translateX(0); opacity: 1; }
         }
 
         .options-grid { display: flex; flex-direction: column; gap: 12px; margin-top: 20px; }
 
         button {
             width: 100%; padding: 14px; border: 2px solid #ffccd5;
-            background: rgba(255, 255, 255, 0.95); border-radius: 20px;
+            background: rgba(255, 255, 255, 0.9); border-radius: 20px;
             cursor: pointer; transition: 0.3s; color: var(--text-color);
             font-family: 'Quicksand', sans-serif; font-weight: 700;
             box-shadow: 0 4px 10px rgba(0,0,0,0.05);
-            position: relative; overflow: hidden;
         }
-
         button:hover { 
             background: linear-gradient(45deg, #ffafcc, #bde0fe); 
-            color: white; border-color: white; transform: translateY(-3px);
+            color: white; border-color: white; transform: scale(1.03); 
         }
 
-        /* Polaroid Style for Letter */
-        .polaroid {
-            background: white;
-            padding: 10px 10px 30px 10px;
-            box-shadow: 0 10px 25px rgba(0,0,0,0.1);
-            transform: rotate(-2deg);
-            margin-bottom: 15px;
-        }
+        .shake { animation: shake 0.4s ease-in-out; background-color: var(--wrong-red) !important; color: #b91c1c !important; }
+        @keyframes shake { 0%, 100% { transform: translateX(0); } 25% { transform: translateX(-8px); } 75% { transform: translateX(8px); } }
 
-        .letter-paper { 
-            background: #fff; padding: 10px; border-radius: 5px; 
-            font-family: 'Dancing Script', cursive; font-size: 1.3rem; 
-            color: #444; line-height: 1.4;
+        .valentine-title { 
+            font-family: 'Dancing Script', cursive; 
+            font-size: 3rem; 
+            font-weight: 700;
+            color: #ff4d6d;
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.1);
+            animation: floatText 3s ease-in-out infinite; 
         }
-
+        @keyframes floatText { 0%, 100% { transform: translateY(0) scale(1); } 50% { transform: translateY(-10px) scale(1.05); } }
+        
         .gift-container { display: flex; justify-content: center; gap: 20px; margin: 30px 0; }
-        .gift-item { font-size: 60px; cursor: pointer; transition: 0.4s; }
-        .gift-item:hover { transform: scale(1.2); }
+        .gift-item { font-size: 60px; cursor: pointer; transition: 0.3s; animation: wobble 2s infinite; }
+        @keyframes wobble { 0%, 100% { transform: rotate(0deg); } 25% { transform: rotate(5deg); } 75% { transform: rotate(-5deg); } }
+
+        .letter-view, .password-view, .music-view { display: none; text-align: left; }
+        .letter-paper { background: #fff; padding: 20px; border-radius: 15px; font-family: 'Dancing Script', cursive; font-size: 1.4rem; color: #444; margin-bottom: 20px; min-height: 150px; border: 1px solid #eee; }
+
+        .music-text {
+            font-family: 'Montserrat', sans-serif;
+            font-size: 1.2rem;
+            color: #8338ec;
+            line-height: 1.6;
+            letter-spacing: 0.5px;
+            font-weight: 600;
+            text-align: center;
+            background: linear-gradient(45deg, #ff4d6d, #8338ec);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
 
         .back-icon { 
-            cursor: pointer; display: inline-block; margin-top: 15px; 
-            background: #ffc8dd; padding: 8px 20px; border-radius: 20px; 
-            color: white; font-weight: bold;
+            font-size: 0.8rem; cursor: pointer; display: inline-block; 
+            margin-top: 15px; background: #ffc8dd; padding: 8px 20px; 
+            border-radius: 20px; color: white; font-weight: bold;
+            transition: 0.3s; text-align: center;
         }
+        .back-icon:hover { background: #ffafcc; transform: translateY(-2px); }
+        .center-btn { text-align: center; width: 100%; }
 
-        #copy-toast {
-            position: fixed; bottom: 20%; left: 50%; transform: translateX(-50%);
-            background: var(--text-color); color: white; padding: 10px 20px;
-            border-radius: 20px; opacity: 0; transition: 0.3s; z-index: 1000;
-        }
+        .reveal-pass { opacity: 0; animation: slowShow 2s forwards; }
+        @keyframes slowShow { to { opacity: 1; } }
 
-        .heart-particle {
-            position: fixed; pointer-events: none; z-index: 9999; font-size: 20px;
-        }
-
-        #no-btn { transition: 0.2s ease-out; }
+        .particle { position: absolute; width: 8px; height: 8px; border-radius: 50%; pointer-events: none; z-index: 999; }
     </style>
 </head>
 <body>
 
 <canvas id="lineCanvas"></canvas>
-<div id="copy-toast">Copied to your heart! ❤️</div>
 
 <div class="container">
     <audio id="bgMusic" loop><source src="music.mp3.mp3" type="audio/mpeg"></audio>
@@ -153,15 +167,7 @@
     <div id="q8" class="page"><h2>Question 8</h2><p>What is my favorite thing about you?</p><div class="options-grid"><button onclick="next(this, false)">Your Eyes</button><button onclick="next(this, false)">Your Smile</button><button onclick="next(this, true)">Everything!</button><button onclick="next(this, false)">Effortless Movement</button></div></div>
     <div id="q9" class="page"><h2>Question 9</h2><p>Which is my fav thing you says?</p><div class="options-grid"><button onclick="next(this, false)">Bibinee</button><button onclick="next(this, true)">Entha Bibinneee</button><button onclick="next(this, false)">Babbyyy</button><button onclick="next(this, false)">Poddaaa</button></div></div>
     <div id="q10" class="page"><h2>Question 10</h2><p>Do you love me?</p><div class="options-grid"><button onclick="next(this, true)">YESSS!</button><button onclick="next(this, false)">No</button><button onclick="next(this, false)">Maybe</button><button onclick="next(this, false)">I'll think about it</button></div></div>
-    
-    <div id="q11" class="page">
-        <h2>Question 11</h2>
-        <p>Will you be my Valentine?</p>
-        <div class="options-grid">
-            <button onclick="checkScore(this, true)">YES!</button>
-            <button id="no-btn" onmouseover="moveNo()" ontouchstart="moveNo()">No way</button>
-        </div>
-    </div>
+    <div id="q11" class="page"><h2>Question 11</h2><p>Will you be my Valentine? </p><div class="options-grid"><button onclick="checkScore(this, true)">YES!</button><button onclick="checkScore(this, false)">No way</button></div></div>
 
     <div id="result-page" class="page">
         <h2>Results!</h2>
@@ -180,23 +186,30 @@
             </div>
         </div>
 
-        <div id="letter-view" class="letter-view">
-            <div class="polaroid">
-                <div class="letter-paper" id="typed-letter"></div>
+        <div id="music-view" class="music-view">
+            <div style="text-align: center; margin-top: 20px;">
+                <p class="music-text">
+                    Every note of this song reminds me of you. <br>
+                    You are the melody in my heart, Archana. <br>
+                    I could listen to this forever with you. ✨
+                </p>
+                <div class="center-btn"><div class="back-icon" onclick="backToGifts()">🌸 Back</div></div>
             </div>
-            <div class="back-icon" onclick="backToGifts()">🌸 Back</div>
         </div>
 
-        <div id="music-view" class="music-view">
-            <p class="music-text">Every note of this song reminds me of you. <br>Melody of my heart, Archana. ✨</p>
-            <div class="back-icon" onclick="backToGifts()">🌸 Back</div>
+        <div id="letter-view" class="letter-view">
+            <div class="letter-paper" id="typed-letter"></div>
+            <div class="center-btn"><div class="back-icon" onclick="backToGifts()">🌸 Back</div></div>
         </div>
 
         <div id="password-view" class="password-view">
-            <p>Secret Gift Password:</p>
-            <h2 id="pass-code" onclick="copyPass()" style="cursor:pointer; border: 2px dashed #ffafcc; padding: 10px;">Archanamadhu@7736</h2>
-            <p style="font-size: 0.7rem;">(Tap to copy ✨)</p>
-            <div class="back-icon" onclick="backToGifts()">🌸 Back</div>
+            <div style="text-align: center; margin-top: 20px;">
+                <p>The secret gift password is:</p>
+                <h2 class="reveal-pass" style="color: #ff4d6d; background: white; padding: 10px; border-radius: 10px; border: 2px dashed #ffafcc; margin-bottom: 25px;">
+                    Archanamadhu@7736
+                </h2>
+                <div class="center-btn"><div class="back-icon" onclick="backToGifts()">🌸 Back</div></div>
+            </div>
         </div>
     </div>
 </div>
@@ -207,15 +220,15 @@
     let currentStep = 1; let score = 0; let time = 0;
     const music = document.getElementById('bgMusic');
 
-    // Canvas Background
     function resize() { canvas.width = window.innerWidth; canvas.height = window.innerHeight; }
     window.addEventListener('resize', resize); resize();
-    const colors = ['#ffafcc', '#bde0fe', '#ffc8dd', '#ffffff'];
-    const curveLines = Array.from({length: 20}, () => ({
+
+    const colors = ['#ffafcc', '#bde0fe', '#ffc8dd', '#fff'];
+    const curveLines = Array.from({length: 40}, () => ({
         yBase: Math.random() * canvas.height, amplitude: Math.random() * 50 + 20,
         frequency: Math.random() * 0.003 + 0.001, speed: Math.random() * 0.01 + 0.005,
         offset: Math.random() * 5000, color: colors[Math.floor(Math.random() * colors.length)],
-        width: Math.random() * 2 + 1, opacity: 0.3
+        width: Math.random() * 3 + 2, opacity: 0.2
     }));
 
     function animate() {
@@ -233,39 +246,11 @@
     }
     animate();
 
-    // Heart Burst on Click
-    window.addEventListener('click', (e) => {
-        for (let i = 0; i < 6; i++) {
-            const heart = document.createElement('div');
-            heart.className = 'heart-particle';
-            heart.innerHTML = ['❤️', '💖', '✨', '🌸'][Math.floor(Math.random() * 4)];
-            heart.style.left = e.clientX + 'px';
-            heart.style.top = e.clientY + 'px';
-            document.body.appendChild(heart);
-            const angle = Math.random() * Math.PI * 2;
-            const velocity = Math.random() * 100 + 50;
-            heart.animate([
-                { transform: 'translate(0, 0) scale(1)', opacity: 1 },
-                { transform: `translate(${Math.cos(angle) * velocity}px, ${Math.sin(angle) * velocity}px) scale(0)`, opacity: 0 }
-            ], { duration: 800, easing: 'ease-out' }).onfinish = () => heart.remove();
-        }
-    });
-
-    // Escaping No Button
-    function moveNo() {
-        const noBtn = document.getElementById('no-btn');
-        const x = Math.random() * (window.innerWidth - noBtn.offsetWidth);
-        const y = Math.random() * (window.innerHeight - noBtn.offsetHeight);
-        noBtn.style.position = 'fixed';
-        noBtn.style.left = x + 'px';
-        noBtn.style.top = y + 'px';
-    }
-
-    // Typing Letter
     const letterText = "My Dearest Archana,\n\nThank you for being in my life. Every moment with you is a treasure. I'm so happy I found you. \n\nAlways yours, \nBibin ❤️";
     function typeLetter() {
         const target = document.getElementById('typed-letter');
-        target.innerHTML = ""; let i = 0;
+        target.innerHTML = "";
+        let i = 0;
         const timer = setInterval(() => {
             if (i < letterText.length) {
                 target.innerHTML += letterText.charAt(i) === '\n' ? '<br>' : letterText.charAt(i);
@@ -274,15 +259,14 @@
         }, 50);
     }
 
-    // Quiz Logic
     function startQuiz() {
         document.getElementById('instruction-page').classList.remove('active');
         document.getElementById('q1').classList.add('active');
     }
 
     function next(btn, isCorrect) {
-        if(isCorrect) { score++; btn.style.backgroundColor = "#b9fbc0"; } 
-        else { btn.classList.add('shake'); setTimeout(() => btn.classList.remove('shake'), 400); }
+        if(isCorrect) { score++; btn.style.backgroundColor = "#b9fbc0"; createFireworks(35); } 
+        else { btn.classList.add('shake'); }
         setTimeout(() => {
             document.getElementById(`q${currentStep}`).classList.remove('active');
             currentStep++;
@@ -291,7 +275,8 @@
     }
 
     function checkScore(btn, isCorrect) {
-        if(isCorrect) { score++; btn.style.backgroundColor = "#b9fbc0"; }
+        if(isCorrect) { score++; btn.style.backgroundColor = "#b9fbc0"; createFireworks(40); }
+        else { btn.classList.add('shake'); }
         setTimeout(() => {
             document.getElementById(`q11`).classList.remove('active');
             document.getElementById('result-page').classList.add('active');
@@ -305,6 +290,16 @@
                 giftBtn.style.display = 'block'; giftBtn.innerText = "Try Again 🔄"; giftBtn.onclick = () => location.reload();
             }
         }, 600);
+    }
+
+    function createFireworks(count = 10) {
+        for (let i = 0; i < count; i++) {
+            const p = document.createElement('div');
+            p.className = 'particle'; p.style.backgroundColor = colors[Math.floor(Math.random()*4)];
+            p.style.left = '50%'; p.style.top = '50%'; document.body.appendChild(p);
+            const dX = (Math.random() - 0.5) * 500, dY = (Math.random() - 0.5) * 500;
+            p.animate([{ opacity: 1, transform: 'translate(0,0) scale(1)' }, { opacity: 0, transform: `translate(${dX}px, ${dY}px) scale(0.2)` }], 1200).onfinish = () => p.remove();
+        }
     }
 
     function showGift() {
@@ -321,16 +316,10 @@
 
     function backToGifts() {
         music.pause(); music.currentTime = 0;
-        document.querySelectorAll('.letter-view, .password-view, .music-view').forEach(v => v.style.display = 'none');
+        document.getElementById('letter-view').style.display = 'none';
+        document.getElementById('password-view').style.display = 'none';
+        document.getElementById('music-view').style.display = 'none';
         document.getElementById('gift-selection').style.display = 'block';
-    }
-
-    function copyPass() {
-        navigator.clipboard.writeText("Archanamadhu@7736").then(() => {
-            const toast = document.getElementById('copy-toast');
-            toast.style.opacity = '1';
-            setTimeout(() => toast.style.opacity = '0', 2000);
-        });
     }
 </script>
 </body>
