--- a/index.html
+++ b/index.html
@@ -63,7 +63,10 @@
         .page { display: none; }
         .active { display: block; animation: slideIn 0.6s cubic-bezier(0.23, 1, 0.32, 1); }
 
-        @keyframes slideIn { from { transform: translateX(50px); opacity: 0; } to { transform: translateX(0); opacity: 1; } }
+        @keyframes slideIn {
+            from { transform: translateX(50px); opacity: 0; }
+            to { transform: translateX(0); opacity: 1; }
+        }
 
         .options-grid { display: flex; flex-direction: column; gap: 12px; margin-top: 20px; position: relative; min-height: 280px; }
 
@@ -74,9 +77,12 @@
             font-family: 'Quicksand', sans-serif; font-weight: 700;
         }
         
-        button:hover { background: linear-gradient(45deg, #ffafcc, #bde0fe); color: white; border-color: white; transform: scale(1.03); }
+        button:hover { 
+            background: linear-gradient(45deg, #ffafcc, #bde0fe); 
+            color: white; border-color: white; transform: scale(1.03); 
+        }
 
-        /* Q11 No Button - NO COLOR CHANGES */
+        /* Question 11 No Button - NO COLOR CHANGES ON CLICK */
         #noButton {
             position: absolute;
             width: 100%;
@@ -85,7 +91,7 @@
             bottom: 0;
             transition: 0.05s linear; 
             z-index: 100;
-            background: rgba(255, 255, 255, 0.9) !important;
+            background: rgba(255, 255, 255, 0.9) !important; /* Forces color to stay white */
             color: var(--text-color) !important;
             border: 2px solid #ffccd5 !important;
         }
@@ -94,8 +100,9 @@
         @keyframes shake { 0%, 100% { transform: translateX(0); } 25% { transform: translateX(-8px); } 75% { transform: translateX(8px); } }
 
         .particle { position: absolute; border-radius: 50%; pointer-events: none; z-index: 999; }
+        .cracker { position: absolute; width: 4px; height: 18px; border-radius: 2px; pointer-events: none; z-index: 999; }
 
-        /* SURPRISE PAGES - RESTORED & LOCKED */
+        /* SURPRISE PAGES STYLES */
         .valentine-title { font-family: 'Dancing Script', cursive; font-size: 3rem; font-weight: 700; color: #ff4d6d; text-shadow: 2px 2px 4px rgba(0,0,0,0.1); animation: floatText 3s ease-in-out infinite; }
         @keyframes floatText { 0%, 100% { transform: translateY(0) scale(1); } 50% { transform: translateY(-10px) scale(1.05); } }
         .gift-container { display: flex; justify-content: center; gap: 20px; margin: 30px 0; }
@@ -188,7 +195,7 @@
     const canvas = document.getElementById('lineCanvas');
     const ctx = canvas.getContext('2d');
     let currentStep = 1; let score = 0; let time = 0;
-    const colors = ['#ffafcc', '#bde0fe', '#ffc8dd', '#fff', '#ff0054', '#8338ec', '#ffea00'];
+    const colors = ['#ffafcc', '#bde0fe', '#ffc8dd', '#fff', '#ff0054', '#8338ec'];
     const music = document.getElementById('bgMusic');
 
     function resize() { canvas.width = window.innerWidth; canvas.height = window.innerHeight; }
@@ -231,24 +238,37 @@
         }, 600);
     }
 
+    // UPDATED: Faster movement and forces corner/distance jumps
     function moveNoButton() {
         const btn = document.getElementById('noButton');
         const grid = document.getElementById('q11-grid');
         const maxX = grid.clientWidth - btn.offsetWidth;
         const maxY = grid.clientHeight - btn.offsetHeight;
+        
         let newX, newY;
-        const curX = parseFloat(btn.style.left) || 0;
-        do { newX = Math.random() * maxX; newY = Math.random() * maxY; } 
-        while (Math.abs(newX - curX) < 150); 
-        btn.style.left = newX + "px"; btn.style.top = newY + "px";
+        const currentX = parseFloat(btn.style.left) || 0;
+        const currentY = parseFloat(btn.style.top) || 0;
+
+        // Force a jump that is far from current position (Left/Right/Corners)
+        do {
+            newX = Math.random() * maxX;
+            newY = Math.random() * maxY;
+        } while (Math.abs(newX - currentX) < 100 && Math.abs(newY - currentY) < 100);
+
+        btn.style.left = newX + "px";
+        btn.style.top = newY + "px";
     }
 
     function finalYes(btn) {
         score++;
         btn.style.backgroundColor = "#b9fbc0";
-        const burstInt = setInterval(() => createSparkles(40), 100);
+        const effectInterval = setInterval(() => {
+            createMegaSpark(30);
+            createCrackers(20);
+        }, 100);
+
         setTimeout(() => {
-            clearInterval(burstInt);
+            clearInterval(effectInterval);
             document.getElementById(`q11`).classList.remove('active');
             document.getElementById('result-page').classList.add('active');
             showResult();
@@ -258,15 +278,42 @@
     function createSparkles(count) {
         for (let i = 0; i < count; i++) {
             const p = document.createElement('div');
-            p.className = 'particle'; 
-            p.style.backgroundColor = colors[Math.floor(Math.random()*colors.length)];
-            p.style.width = (Math.random() * 10 + 4) + 'px'; 
-            p.style.height = p.style.width;
-            p.style.left = Math.random() * 100 + '%'; 
-            p.style.top = Math.random() * 100 + '%';
+            p.className = 'particle'; p.style.backgroundColor = colors[Math.floor(Math.random()*4)];
+            p.style.width = '8px'; p.style.height = '8px';
+            p.style.left = '50%'; p.style.top = '50%'; document.body.appendChild(p);
+            const dX = (Math.random() - 0.5) * 600, dY = (Math.random() - 0.5) * 600;
+            p.animate([{ opacity: 1, transform: 'scale(1)' }, { opacity: 0, transform: `translate(${dX}px, ${dY}px) scale(0)` }], 1000).onfinish = () => p.remove();
+        }
+    }
+
+    function createMegaSpark(count) {
+        for (let i = 0; i < count; i++) {
+            const p = document.createElement('div');
+            p.className = 'particle'; p.style.backgroundColor = colors[Math.floor(Math.random() * 4)];
+            p.style.width = (Math.random() * 14 + 5) + 'px'; p.style.height = p.style.width;
+            p.style.left = Math.random() * 100 + '%'; p.style.top = Math.random() * 100 + '%';
             document.body.appendChild(p);
-            const dX = (Math.random() - 0.5) * 1200, dY = (Math.random() - 0.5) * 1200;
-            p.animate([{ opacity: 1, transform: 'scale(1.5)' }, { opacity: 0, transform: `translate(${dX}px, ${dY}px) scale(0)` }], 1500).onfinish = () => p.remove();
+            const dX = (Math.random() - 0.5) * 1500, dY = (Math.random() - 0.5) * 1500;
+            p.animate([{ opacity: 1, transform: 'scale(1.5)' }, { opacity: 0, transform: `translate(${dX}px, ${dY}px) scale(0)` }], 2000).onfinish = () => p.remove();
+        }
+    }
+
+    function createCrackers(count) {
+        for (let i = 0; i < count; i++) {
+            const c = document.createElement('div');
+            c.className = 'cracker';
+            c.style.backgroundColor = ['#fff', '#ffea00', '#ff0054', '#00f2ff'][Math.floor(Math.random()*4)];
+            c.style.left = Math.random() * 100 + '%';
+            c.style.top = Math.random() * 100 + '%';
+            document.body.appendChild(c);
+            const angle = Math.random() * Math.PI * 2;
+            const dist = Math.random() * 1000 + 300;
+            const dX = Math.cos(angle) * dist;
+            const dY = Math.sin(angle) * dist;
+            c.animate([
+                { transform: `rotate(${angle}rad) translate(0,0) scaleY(1.5)`, opacity: 1 },
+                { transform: `rotate(${angle}rad) translate(${dX}px, ${dY}px) scaleY(0)`, opacity: 0 }
+            ], { duration: 900, easing: 'ease-out' }).onfinish = () => c.remove();
         }
     }
 
@@ -280,7 +327,7 @@
                 document.getElementById('gift-page').classList.add('active');
             };
         } else {
-            text.innerText = `Try again, Babbyyy! 11/11 needed!`;
+            text.innerText = `Babbyy, you need 11/11 to see the surprise! Try again!`;
             giftBtn.style.display = 'block'; giftBtn.innerText = "Restart 🔄"; giftBtn.onclick = () => location.reload();
         }
     }
