--- a/index.html
+++ b/index.html
@@ -63,10 +63,7 @@
         .page { display: none; }
         .active { display: block; animation: slideIn 0.6s cubic-bezier(0.23, 1, 0.32, 1); }
 
-        @keyframes slideIn {
-            from { transform: translateX(50px); opacity: 0; }
-            to { transform: translateX(0); opacity: 1; }
-        }
+        @keyframes slideIn { from { transform: translateX(50px); opacity: 0; } to { transform: translateX(0); opacity: 1; } }
 
         .options-grid { display: flex; flex-direction: column; gap: 12px; margin-top: 20px; position: relative; min-height: 280px; }
 
@@ -82,7 +79,6 @@
             color: white; border-color: white; transform: scale(1.03); 
         }
 
-        /* Question 11 No Button - NO COLOR CHANGES ON CLICK */
         #noButton {
             position: absolute;
             width: 100%;
@@ -91,7 +87,7 @@
             bottom: 0;
             transition: 0.05s linear; 
             z-index: 100;
-            background: rgba(255, 255, 255, 0.9) !important; /* Forces color to stay white */
+            background: rgba(255, 255, 255, 0.9) !important;
             color: var(--text-color) !important;
             border: 2px solid #ffccd5 !important;
         }
@@ -102,7 +98,6 @@
         .particle { position: absolute; border-radius: 50%; pointer-events: none; z-index: 999; }
         .cracker { position: absolute; width: 4px; height: 18px; border-radius: 2px; pointer-events: none; z-index: 999; }
 
-        /* SURPRISE PAGES STYLES */
         .valentine-title { font-family: 'Dancing Script', cursive; font-size: 3rem; font-weight: 700; color: #ff4d6d; text-shadow: 2px 2px 4px rgba(0,0,0,0.1); animation: floatText 3s ease-in-out infinite; }
         @keyframes floatText { 0%, 100% { transform: translateY(0) scale(1); } 50% { transform: translateY(-10px) scale(1.05); } }
         .gift-container { display: flex; justify-content: center; gap: 20px; margin: 30px 0; }
@@ -195,7 +190,7 @@
     const canvas = document.getElementById('lineCanvas');
     const ctx = canvas.getContext('2d');
     let currentStep = 1; let score = 0; let time = 0;
-    const colors = ['#ffafcc', '#bde0fe', '#ffc8dd', '#fff', '#ff0054', '#8338ec'];
+    const colors = ['#ffafcc', '#bde0fe', '#ffc8dd', '#fff', '#ff0054', '#8338ec', '#00f2ff', '#ffea00', '#b9fbc0'];
     const music = document.getElementById('bgMusic');
 
     function resize() { canvas.width = window.innerWidth; canvas.height = window.innerHeight; }
@@ -229,7 +224,11 @@
     }
 
     function next(btn, isCorrect) {
-        if(isCorrect) { score++; btn.style.backgroundColor = "#b9fbc0"; createSparkles(25); } 
+        if(isCorrect) { 
+            score++; 
+            btn.style.backgroundColor = "#b9fbc0"; 
+            createSparkles(40); // Increased count and now more colorful
+        } 
         else { btn.classList.add('shake'); }
         setTimeout(() => {
             document.getElementById(`q${currentStep}`).classList.remove('active');
@@ -238,23 +237,18 @@
         }, 600);
     }
 
-    // UPDATED: Faster movement and forces corner/distance jumps
     function moveNoButton() {
         const btn = document.getElementById('noButton');
         const grid = document.getElementById('q11-grid');
         const maxX = grid.clientWidth - btn.offsetWidth;
         const maxY = grid.clientHeight - btn.offsetHeight;
-        
         let newX, newY;
         const currentX = parseFloat(btn.style.left) || 0;
         const currentY = parseFloat(btn.style.top) || 0;
-
-        // Force a jump that is far from current position (Left/Right/Corners)
         do {
             newX = Math.random() * maxX;
             newY = Math.random() * maxY;
         } while (Math.abs(newX - currentX) < 100 && Math.abs(newY - currentY) < 100);
-
         btn.style.left = newX + "px";
         btn.style.top = newY + "px";
     }
@@ -266,7 +260,6 @@
             createMegaSpark(30);
             createCrackers(20);
         }, 100);
-
         setTimeout(() => {
             clearInterval(effectInterval);
             document.getElementById(`q11`).classList.remove('active');
@@ -278,18 +271,26 @@
     function createSparkles(count) {
         for (let i = 0; i < count; i++) {
             const p = document.createElement('div');
-            p.className = 'particle'; p.style.backgroundColor = colors[Math.floor(Math.random()*4)];
-            p.style.width = '8px'; p.style.height = '8px';
-            p.style.left = '50%'; p.style.top = '50%'; document.body.appendChild(p);
-            const dX = (Math.random() - 0.5) * 600, dY = (Math.random() - 0.5) * 600;
-            p.animate([{ opacity: 1, transform: 'scale(1)' }, { opacity: 0, transform: `translate(${dX}px, ${dY}px) scale(0)` }], 1000).onfinish = () => p.remove();
+            p.className = 'particle'; 
+            // UPDATED: Now picks from ALL colors including gold, blue, and purple
+            p.style.backgroundColor = colors[Math.floor(Math.random()*colors.length)];
+            p.style.width = (Math.random() * 8 + 4) + 'px'; 
+            p.style.height = p.style.width;
+            p.style.left = '50%'; p.style.top = '50%'; 
+            document.body.appendChild(p);
+            const dX = (Math.random() - 0.5) * 800, dY = (Math.random() - 0.5) * 800;
+            p.animate([
+                { opacity: 1, transform: 'scale(0)' }, 
+                { opacity: 1, transform: 'scale(1.2)', offset: 0.3 },
+                { opacity: 0, transform: `translate(${dX}px, ${dY}px) scale(0)` }
+            ], 1200).onfinish = () => p.remove();
         }
     }
 
     function createMegaSpark(count) {
         for (let i = 0; i < count; i++) {
             const p = document.createElement('div');
-            p.className = 'particle'; p.style.backgroundColor = colors[Math.floor(Math.random() * 4)];
+            p.className = 'particle'; p.style.backgroundColor = colors[Math.floor(Math.random() * colors.length)];
             p.style.width = (Math.random() * 14 + 5) + 'px'; p.style.height = p.style.width;
             p.style.left = Math.random() * 100 + '%'; p.style.top = Math.random() * 100 + '%';
             document.body.appendChild(p);
@@ -302,7 +303,7 @@
         for (let i = 0; i < count; i++) {
             const c = document.createElement('div');
             c.className = 'cracker';
-            c.style.backgroundColor = ['#fff', '#ffea00', '#ff0054', '#00f2ff'][Math.floor(Math.random()*4)];
+            c.style.backgroundColor = colors[Math.floor(Math.random()*colors.length)];
             c.style.left = Math.random() * 100 + '%';
             c.style.top = Math.random() * 100 + '%';
             document.body.appendChild(c);
