--- a/index.html
+++ b/index.html
@@ -95,7 +95,6 @@
         .shake { animation: shake 0.4s ease-in-out; background-color: var(--wrong-red) !important; color: #b91c1c !important; }
         @keyframes shake { 0%, 100% { transform: translateX(0); } 25% { transform: translateX(-8px); } 75% { transform: translateX(8px); } }
 
-        /* Original Sparkle Particle Style */
         .particle { position: absolute; border-radius: 50%; pointer-events: none; z-index: 999; }
         .cracker { position: absolute; width: 4px; height: 18px; border-radius: 2px; pointer-events: none; z-index: 999; }
 
@@ -191,6 +190,7 @@
     const canvas = document.getElementById('lineCanvas');
     const ctx = canvas.getContext('2d');
     let currentStep = 1; let score = 0; let time = 0;
+    // FULL RAINBOW COLOR PALETTE RESTORED
     const colors = ['#ffafcc', '#bde0fe', '#ffc8dd', '#fff', '#ff0054', '#8338ec', '#00f2ff', '#ffea00', '#b9fbc0'];
     const music = document.getElementById('bgMusic');
 
@@ -228,7 +228,7 @@
         if(isCorrect) { 
             score++; 
             btn.style.backgroundColor = "#b9fbc0"; 
-            createSparkles(25); // Restored original count
+            createSparkles(35); 
         } 
         else { btn.classList.add('shake'); }
         setTimeout(() => {
@@ -269,14 +269,19 @@
         }, 5000); 
     }
 
-    // EXACT ORIGINAL SPARKLE LOGIC & SPEED
+    // UPDATED: BIGGER, MORE COLORFUL, FAST SPARKLES
     function createSparkles(count) {
         for (let i = 0; i < count; i++) {
             const p = document.createElement('div');
-            p.className = 'particle'; p.style.backgroundColor = colors[Math.floor(Math.random()*4)];
-            p.style.width = '8px'; p.style.height = '8px';
+            p.className = 'particle'; 
+            // Full color spectrum
+            p.style.backgroundColor = colors[Math.floor(Math.random()*colors.length)];
+            // Increased Size (original was 8px)
+            p.style.width = (Math.random() * 6 + 10) + 'px'; 
+            p.style.height = p.style.width;
             p.style.left = '50%'; p.style.top = '50%'; document.body.appendChild(p);
-            const dX = (Math.random() - 0.5) * 600, dY = (Math.random() - 0.5) * 600;
+            const dX = (Math.random() - 0.5) * 700, dY = (Math.random() - 0.5) * 700;
+            // Kept fast original logic
             p.animate([{ opacity: 1, transform: 'scale(1)' }, { opacity: 0, transform: `translate(${dX}px, ${dY}px) scale(0)` }], 1000).onfinish = () => p.remove();
         }
     }
